Use /Processed key to track whether smask is processed

Following the ps code, this key is put into the actual SMask dictionary.
Seems hacky, but putting it in the pdfi_int_gstate separately doesn't do
the right thing on gsave/grestore.

I didn't expect this to have any effect, but it actually causes some
progressions (see tests_private/comparefiles/Bug693115.pdf).